--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,8 @@
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.2.3",
+    "nodemailer": "^6.9.3",
+    "nodemailer-sendinblue-transport": "^2.0.1",
     "nodemon": "^2.0.22"
   }
 }
