--- a/client/package.json
+++ b/client/package.json
@@ -10,8 +10,12 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "flowbite": "^1.6.6",
+    "flowbite-vue": "^0.0.14",
+    "pinia": "^2.1.4",
     "vue": "^3.3.4",
-    "vue-router": "^4.2.2"
+    "vue-router": "^4.2.2",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
