--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "mongoose": "^7.2.3",
     "nodemailer": "^6.9.3",
     "nodemailer-sendinblue-transport": "^2.0.1",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "socket.io": "^4.6.2"
   }
 }
