--- a/server/package.json
+++ b/server/package.json
@@ -9,15 +9,23 @@
   },
   "author": "",
   "license": "ISC",
+  "_moduleAliases": {
+    "@models": "models/",
+    "@routes": "routes/"
+  },
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.0",
+    "module-alias": "^2.2.3",
     "mongoose": "^7.2.3",
     "nodemailer": "^6.9.3",
     "nodemailer-sendinblue-transport": "^2.0.1",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "pg": "^8.11.0",
+    "sequelize": "^6.32.1"
   }
 }
