--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,9 +9,9 @@ services:
       MONGO_INITDB_ROOT_USERNAME: root
       MONGO_INITDB_ROOT_PASSWORD: password
     volumes:
-      - ./SampleCollections:/usr/local/sampleCollections
-      - db-data:/data/db
-    working_dir: /usr/local/sampleCollections
+      - ./geoguessr:/usr/local/geoguessr
+      - ./db-data:/data/db
+    working_dir: /usr/local/geoguessr
 
   db:
     image: postgres
@@ -22,20 +22,24 @@ services:
       POSTGRES_PASSWORD: password
       POSTGRES_DB: app
     volumes:
-      - pg-data:/var/lib/postgresql/data
+      - ./pg-data:/var/lib/postgresql/data
 
   server:
     image: node
     ports:
       - 3000:3000
     environment:
+      DB_URL: mongodb+srv://SebYlc:LGECex3QjT1E1THI@challengegeoguessr.ntvjye0.mongodb.net/challenge?retryWrites=true&w=majority
+      PORT: 3000
       DATABASE_URL: postgres://root:password@db:5432/app
       JWT_SECRET: ImAstrongSecret
     working_dir: /usr/src/app
     volumes:
-      - ./${CLASS}/server:/usr/src/app
+      - ./server:/usr/src/app
     command: npm run dev
-
-volumes:
-  db-data: {}
-  pg-data: {}
+  adminer:
+    image: adminer
+    ports:
+      - 8080:8080
+    environment:
+      ADMINER_DEFAULT_SERVER: db
