--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,25 +1,29 @@
-name: Run Tests
+
+name: Node.js CI
 
 on:
   push:
-    branches:
-      - dev 
-      - feature/unit-testing
-      - main
+    branches: [ "main", "feature/unit-testing" ]
+  pull_request:
+    branches: [ "main" , "feature/unit-testing"]
+
 jobs:
-  test:
-    runs-on: ubuntu-latest  
+  build:
+
+    runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        node-version: [14.x, 16.x, 18.x]
+        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
+
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2 
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: '14' 
-
-      - name: Install dependencies
-        run: npm install  
-
-      - name: Run tests
-        run: npm run test  
+    - uses: actions/checkout@v3
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v3
+      with:
+        node-version: ${{ matrix.node-version }}
+        cache: 'npm'
+    - run: npm ci
+    - run: npm run build --if-present
+    - run: npm run test
