--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,30 +1,26 @@
-
-name: Node.js CI
+name: Run Tests
 
 on:
   push:
-    branches: [ "main", "feature/unit-testing" ]
-  pull_request:
-    branches: [ "main" , "feature/unit-testing"]
-
+    branches:
+      - dev 
+      - feature/unit-testing
 jobs:
-  build:
-
-    runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: [14.x, 16.x, 18.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
-
+  test:
+    runs-on: ubuntu-latest  
     steps:
-    - uses: actions/checkout@v3
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v3
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-    - run: cd server
-    - run: npm ci
-    - run: npm run build --if-present
-    - run: npm run test
+      - name: Checkout code
+        uses: actions/checkout@v2 
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '20'
+          
+      - run: cd server
+
+      - name: Install dependencies
+        run: npm install  
+
+      - name: Run tests
+        run: npm run test  
