--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: '20'
+          node-version: '20.2'
           
       - run: cd server
 
@@ -23,4 +23,4 @@ jobs:
         run: npm install  
 
       - name: Run tests
-        run: npm run test  
+        run: npm test  
