--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -20,7 +20,8 @@ jobs:
       - run: cd server
 
       - name: Install dependencies
-        run: npm install  
+        run: npm install 
+      - run: npm install jest -g
 
       - name: Run tests
-        run: npm test  
+        run: npm run test  
