--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -18,10 +18,10 @@ jobs:
           node-version: '20.2'
           
       - run: cd server
+      - run: cat package.json
 
       - name: Install dependencies
         run: npm install 
-      - run: npm install jest -g
 
       - name: Run tests
-        run: npm run test  
+        run: npm test  
