--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -12,17 +12,10 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2 
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v2
+      - name: Setup Node.js and run tests
         with:
           node-version: '20.2'
-          
-      - run: cd server
-      - run: ls
-      - run: cat package.json
-
-      - name: Install dependencies
-        run: npm install 
-
-      - name: Run tests
-        run: npm test  
+          working-directory: ./app
+          run : |
+            run: npm install 
+            run: npm test  
