--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -13,9 +13,9 @@ jobs:
         uses: actions/checkout@v2 
 
       - name: Setup Node.js and run tests
-        with:
-          node-version: '20.2'
-          working-directory: ./app
-          run : |
-            run: npm install 
-            run: npm test  
+        uses: actions/setup-node@v2
+        
+      - working-directory: ./server
+        run : |
+          run: npm install 
+          run: npm test  
