--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -21,6 +21,10 @@ jobs:
         run: ls 
         working-directory: ./server
                 
+      - name: install Jest
+        run: npm install jest -g
+        working-directory: ./server
+        
       - name: JSON Package
         run: cat package.json
         working-directory: ./server
