--- a/server/package.json
+++ b/server/package.json
@@ -30,7 +30,8 @@
     "nodemon": "^2.0.22",
     "pg": "^8.11.0",
     "sequelize": "^6.32.1",
-    "socket.io": "^4.6.2"
+    "socket.io": "^4.6.2",
+    "jest": "^27.3.1"
   },
   "nodemonConfig": {
     "legacyWatch": true
