--- a/server/package.json
+++ b/server/package.json
@@ -21,17 +21,19 @@
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
+    "fs": "^0.0.1-security",
     "googleapis": "^122.0.0",
+    "jest": "^27.3.1",
     "jsonwebtoken": "^9.0.1",
     "module-alias": "^2.2.3",
     "mongoose": "^7.2.3",
     "nodemailer": "^6.9.3",
     "nodemailer-sendinblue-transport": "^2.0.1",
     "nodemon": "^2.0.22",
+    "path": "^0.12.7",
     "pg": "^8.11.0",
     "sequelize": "^6.32.1",
-    "socket.io": "^4.6.2",
-    "jest": "^27.3.1"
+    "socket.io": "^4.6.2"
   },
   "nodemonConfig": {
     "legacyWatch": true
