--- a/package.json
+++ b/package.json
@@ -5,5 +5,8 @@
     "cors": "^2.8.5",
     "jsonwebtoken": "^9.0.1",
     "nodemailer": "^6.9.3"
+  },
+  "nodemonConfig": {
+    "legacyWatch": true
   }
 }
