--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,8 @@
     "@routes": "routes/"
   },
   "dependencies": {
+    "@google/maps": "^1.1.3",
+    "@googlemaps/google-maps-services-js": "^3.3.34",
     "bcrypt": "^5.1.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
