--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.6'
+version: "3.6"
 
 services:
   mongo:
@@ -10,7 +10,7 @@ services:
       MONGO_INITDB_ROOT_PASSWORD: password
     volumes:
       - ./geoguessr:/usr/local/geoguessr
-      - ./db-data:/data/db
+      - db-data:/data/db
     working_dir: /usr/local/geoguessr
 
   db:
@@ -22,7 +22,7 @@ services:
       POSTGRES_PASSWORD: password
       POSTGRES_DB: app
     volumes:
-      - ./pg-data:/var/lib/postgresql/data
+      - pg-data:/var/lib/postgresql/data
 
   server:
     image: node
@@ -43,3 +43,7 @@ services:
       - 8080:8080
     environment:
       ADMINER_DEFAULT_SERVER: db
+
+volumes:
+  db-data:
+  pg-data:
