Security + fin Achievements

--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "crypto": "^1.0.1",
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "express-validator": "^7.0.1",
     "fs": "^0.0.1-security",
     "googleapis": "^122.0.0",
@@ -30,6 +31,7 @@
     "nodemailer": "^6.9.3",
     "nodemailer-sendinblue-transport": "^2.0.1",
     "nodemon": "^2.0.22",
+    "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
     "pg": "^8.11.0",
