--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vueuse/core": "^10.2.1",
     "axios": "^1.4.0",
     "flowbite": "^1.6.6",
     "flowbite-vue": "^0.0.14",
