--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -10,7 +10,6 @@ services:
       MONGO_INITDB_ROOT_PASSWORD: password
       DB_URL: ${DB_URL}
     volumes:
-      - ./geoguessr:/usr/local/geoguessr
       - db-data:/data/db
     working_dir: /usr/local/geoguessr
 
@@ -40,10 +39,10 @@ services:
       GOOGLE_CLIENT_SECRET : ${GOOGLE_CLIENT_SECRET}
       GOOGLE_CLIENT_ID : ${GOOGLE_CLIENT_ID}
 
-      
+
     working_dir: /usr/src/app
     volumes:
-      - ./server:/usr/src/app
+      - ./:/usr/src/app
     command: npm run dev
   adminer:
     image: adminer
@@ -51,7 +50,7 @@ services:
       - 8080:8080
     environment:
       ADMINER_DEFAULT_SERVER: db
-      
+
 volumes:
   db-data:
   pg-data:
