--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -27,10 +27,10 @@ services:
   server:
     image: node
     ports:
-      - 3000:3000
+      - 443:443
     environment:
       DB_URL: ${DB_URL}
-      PORT: 3000
+      PORT: 443
       DATABASE_URL: ${DATABASE_URL}
       JWT_SECRET: ${JWT_SECRET}
       STRIPE_SECRET_KEY: ${STRIPE_SECRET_KEY}
@@ -38,6 +38,7 @@ services:
       GOOGLE_CALLBACK : ${GOOGLE_CALLBACK}
       GOOGLE_CLIENT_SECRET : ${GOOGLE_CLIENT_SECRET}
       GOOGLE_CLIENT_ID : ${GOOGLE_CLIENT_ID}
+      BASE_URL: ${BASE_URL}
 
 
     working_dir: /usr/src/app
