--- a/client/package.json
+++ b/client/package.json
@@ -9,11 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@vueuse/core": "^10.2.1",
     "@stripe/stripe-js": "^1.54.1",
+    "@vueuse/core": "^10.2.1",
     "axios": "^1.4.0",
     "flowbite": "^1.6.6",
     "flowbite-vue": "^0.0.14",
+    "jsonwebtoken": "^9.0.1",
+    "jwt-decode": "^3.1.2",
     "pinia": "^2.1.4",
     "pinia-plugin-persist": "^1.0.0",
     "socket.io-client": "^4.6.2",
