--- a/server/package.json
+++ b/server/package.json
@@ -41,7 +41,8 @@
     "pg": "^8.11.0",
     "sequelize": "^6.32.1",
     "socket.io": "^4.6.2",
-    "stripe": "^12.14.0"
+    "stripe": "^12.14.0",
+    "supertest": "^6.3.3"
   },
   "nodemonConfig": {
     "legacyWatch": true
